...

    @IBOutlet private weak var yesButton: UIButton!
    @IBOutlet private weak var noButton: UIButton!

    private var activityIndicator: UIActivityIndicatorView = {
        let indicator = UIActivityIndicatorView()
        indicator.accessibilityIdentifier = "Loading Indicator"
        return indicator
    }()
}


// MARK: - Lifecycle
...
